--- a/css/index.css
+++ b/css/index.css
@@ -23,10 +23,12 @@ h1 {
   border: 15px solid pink;
   border-radius: 0;
   display: inline;
+  min-width: 250px;
 }
 
 table {
   border-collapse: collapse;
+  margin-top: 15px;
 }
 
 tr {
@@ -74,4 +76,43 @@ hr {
 a img {
   width: 50px;
   margin: 1% 3% 1% 3%;
+}
+
+/* Resize word repitition pane as screen size varies */
+@media (max-width: 1023px) {
+  h1 {
+    font-size: 10rem;
+  }
+  #photo {
+    min-width: 150px;
+  }
+}
+
+@media (max-width: 768px) {
+tr td:nth-of-type(2) {
+  color: #3498db;
+  line-height: 1.4;
+  text-transform: uppercase;
+  text-align: left;
+  letter-spacing: 0.25rem;
+  width: 715px;
+  padding: 0px 0px 0px 15px;
+  font-size: 1.5em;
+}
+}
+
+@media (max-width: 576px) {
+tr td:nth-of-type(2) {
+  color: #3498db;
+  line-height: 1.4;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.25rem;
+  width: 715px;
+  padding: 15px 0px 0px 0px;
+  font-size: 1.5em;
+}
+#paragraph {
+  font-size: 1rem;
+}
 }
